...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_favorite_grey" translatesAutoresizingMaskIntoConstraints="NO" id="ott-5B-xp1">
                                        <rect key="frame" x="16" y="15" width="26" height="26"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ic_love">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vIR-bd-4Cc">
                                                        <rect key="frame" x="16" y="17.666666666666686" width="340" height="25"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="title"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="25" id="Wda-AA-9bn"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9I-gp-rRE">
                                                <rect key="frame" x="16" y="248" width="382" height="371"/>
                                                <accessibility key="accessibilityConfiguration" identifier="description"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="371" id="2cH-t0-z5h"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <state key="normal" title="Buy">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qao-mL-3qH">
                                        <rect key="frame" x="68" y="17.666666666666629" width="200" height="25"/>
                                        <accessibility key="accessibilityConfiguration" identifier="price"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="Tuy-0f-Pzh"/>
...
