...
        detailViewModel.shareProduct(vc: self, productData: productData)
    }
}

extension DetailViewController: DetailProtocol {
    func didFinishBuyProduct() {
        Utility.showAlert(toController: self, withTitle: "Information", withMessage: "Added to Purchased Product")
    }
    
    func failedToBuyProduct(_ error: Failure) {
        Utility.showAlert(toController: self, withTitle: "Information", withMessage: error.message)
    }
}
...
